@@ -1,6 +1,10 @@
 2016-06-05  SilverNexus
 	* Makefile.am: Add binary_file_cache.c to list of sources.
 	* binary_file_cache.c: Correct some warnings from sort and search comparisons.
+	  Add a function to initialize the global values.
+	* search.c: Implement the check of the cache.
+	* main.c: Call the initialization of the cache and set up for cleanup at termination.
+	* binary_file_cache.h: Add prototype for cache initialization.
 
 2016-06-03  SilverNexus
 	* search.c: Remove unecessary variable in parse_file().
